--- a/index.html
+++ b/index.html
@@ -1,77 +1,41 @@
 
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Sass Template</title>
-    <link rel="stylesheet" href="css/app.css">
-  </head>
-  <body>
-    <nav class="navbar navbar-default ">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Project name</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="http://twiiter.com"><i class="fa fa-twitter"></i></a></li>
-            <li><a href="http://facebook.com"><i class="fa fa-facebook"></i></a></li>
-            <li><a href="http://instagram.com"><i class="fa fa-instagram"></i></a></li>
-            <li><a href="https://plus.google.com/"><i class="fa fa-google-plus"></i></a></li>
-            
-          </ul>
-        </div><!--/.nav-collapse -->
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Sass Template</title>
+  <link rel="stylesheet" href="css/app.css">
+</head>
+<body>
+  <nav class="navbar navbar-default ">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Project name</a>
       </div>
-    </nav>
-
-    <div class="showcase">
-      <div class="container">
-        <h1>Got Ideas?</h1>
-        <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit, error! Minus vero omnis aliquam explicabo harum! Vel quis explicabo esse?</p>
-        <a href="about.html" class="btn btn-primary">Read More</a>
-      </div>
+    <div id="navbar" class="collapse navbar-collapse">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="http://twiiter.com"><i class="fa fa-twitter"></i></a></li>
+        <li><a href="http://facebook.com"><i class="fa fa-facebook"></i></a></li>
+        <li><a href="http://instagram.com"><i class="fa fa-instagram"></i></a></li>
+        <li><a href="https://plus.google.com/"><i class="fa fa-google-plus"></i></a></li>
+      </ul>
+    </div><!--/.nav-collapse -->
     </div>
-
-    <div class="section-a">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-4">
-            <i class="fa fa-html5"></i>
-            <h3>Clean & Simple code</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam et sapiente sunt illo odit exercitationem!</p>
-          </div>
-          <div class="col-md-4">
-            <i class="fa fa-gear"></i>
-            <h3>Sass PreCompiler</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam et sapiente sunt illo odit exercitationem!</p>
-          </div>
-          <div class="col-md-4">
-            <i class="fa fa-lightbulb-o"></i>
-            <h3>Customizable</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam et sapiente sunt illo odit exercitationem!</p>
-          
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <script src="bower_componets/jquery/dist/jquery.js"></script>
-    <script src="bower_componets/bootstrap-sass/assets/javascript/bootstrap.js"></script>
-
-
-
-  </body>
+  </nav>
+<script src="bower_componets/jquery/jquery.min.js"></script>
+<script src="bower_componets/bootstrap-sass/assets/javascript/bootstrap.js"></script>
+</body>
 </html>
