--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sass Template</title>
-  <link rel="stylesheet" href="css/app.css">
+  <link rel="stylesheet" href="styles/css/app.css">
 </head>
 <body>
   <nav class="navbar navbar-default ">
