--- a/index.html
+++ b/index.html
@@ -9,33 +9,51 @@
   <link rel="stylesheet" href="styles/css/app.css">
 </head>
 <body>
-  <nav class="navbar navbar-default ">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">Project name</a>
-      </div>
-    <div id="navbar" class="collapse navbar-collapse">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="http://twiiter.com"><i class="fa fa-twitter"></i></a></li>
-        <li><a href="http://facebook.com"><i class="fa fa-facebook"></i></a></li>
-        <li><a href="http://instagram.com"><i class="fa fa-instagram"></i></a></li>
-        <li><a href="https://plus.google.com/"><i class="fa fa-google-plus"></i></a></li>
-      </ul>
-    </div><!--/.nav-collapse -->
-    </div>
-  </nav>
-<script src="bower_componets/jquery/jquery.min.js"></script>
-<script src="bower_componets/bootstrap-sass/assets/javascript/bootstrap.js"></script>
+<!-- Navigation -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+<div class="container">
+<a class="navbar-brand" href="#">Start Bootstrap</a>
+<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+<span class="navbar-toggler-icon"></span>
+</button>
+<div class="collapse navbar-collapse" id="navbarResponsive">
+<ul class="navbar-nav ml-auto">
+<li class="nav-item active">
+<a class="nav-link" href="#">Home
+<span class="sr-only">(current)</span>
+</a>
+</li>
+<li class="nav-item">
+<a class="nav-link" href="#">About</a>
+</li>
+<li class="nav-item">
+<a class="nav-link" href="#">Services</a>
+</li>
+<li class="nav-item">
+<a class="nav-link" href="#">Contact</a>
+</li>
+</ul>
+</div>
+</div>
+</nav>
+
+<!-- Page Content -->
+<div class="container">
+<div class="row">
+<div class="col-lg-12 text-center">
+<h1 class="mt-5">A Bootstrap 4 Starter Template</h1>
+<p class="lead">Complete with pre-defined file paths and responsive navigation!</p>
+<ul class="list-unstyled">
+<li>Bootstrap 4.1.1</li>
+<li>jQuery 3.3.1</li>
+</ul>
+</div>
+</div>
+</div>
+
+    <!-- Bootstrap core JavaScript -->
+
+<script src="node_modules/jquery/jquery.min.js"></script>
+<script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
