--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <!-- Navigation -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
     <a class="navbar-brand" href="#">Start Bootstrap</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -39,18 +39,20 @@
 
 
 <!-- Page Content -->
-<div class="container">
-<div class="row">
-<div class="col-lg-12 text-center">
-<h1 class="mt-5">A Bootstrap 4 Starter Template</h1>
-<p class="lead">Complete with pre-defined file paths and responsive navigation!</p>
-<ul class="list-unstyled">
-<li>Bootstrap 4.1.1</li>
-<li>jQuery 3.3.1</li>
-</ul>
-</div>
-</div>
-</div>
+ <section class="first-section">
+  <div class="base-section"> 
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <div class="base-header">
+            <h1 class="mt-5">A Bootstrap 4 Starter Template</h1>
+          </div>
+          <p class="tag">Complete with pre-defined file paths and responsive navigation!</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 <!-- Bootstrap core JavaScript -->
 <script src="node_modules/jquery/jquery.min.js"></script>
 <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
