Class names changed

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
   <div class="base-section"> 
     <div class="container">
       <div class="row">
-        <div class="col-lg-12 text-center">
+        <div class="col-lg-12">
           <div class="base-header">
-            <h1 class="mt-5">A Bootstrap 4 Starter Template</h1>
+            <h1 class="section-h">A Bootstrap 4 Starter Template</h1>
+            <p class="tag">Complete with pre-defined file paths and responsive navigation!</p>
           </div>
-          <p class="tag">Complete with pre-defined file paths and responsive navigation!</p>
         </div>
       </div>
     </div>
