--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sass Template</title>
-  <link rel="stylesheet" href="styles/css/app.css">
+  <link rel="stylesheet" href="assets/styles/css/app.css">
 </head>
 <body>
 <!-- Navigation -->
@@ -39,19 +39,19 @@
 
 
 <!-- Page Content -->
- <section class="first-section">
-  <div class="base-section"> 
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="base-header">
-            <h1 class="section-h">A Bootstrap 4 Starter Template</h1>
-            <p class="tag">Complete with pre-defined file paths and responsive navigation!</p>
-          </div>
+<section class="showcase">
+<div class="base-section"> 
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="base-header">
+          <h1 class="section-h">A Bootstrap 4 Starter Template</h1>
+          <p class="tag">Complete with pre-defined file paths and responsive navigation!</p>
         </div>
       </div>
     </div>
   </div>
+</div>
 </section>
 <!-- Bootstrap core JavaScript -->
 <script src="node_modules/jquery/jquery.min.js"></script>
