--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sass Template</title>
   <link rel="stylesheet" href="assets/styles/css/app.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
 </head>
 <body>
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
-    <a class="navbar-brand" href="#">Start Bootstrap</a>
+    <a class="navbar-brand" href="#">brand</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -43,12 +44,17 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="base-header">
-            <h1 class="section-h">A Bootstrap 4 Starter Template</h1>
-            <p class="tag">Complete with pre-defined file paths and responsive navigation!</p>
+            <h1 class="base-header">Welcome</h1>
+            <p class="tag">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque iure sunt optio.</p>
           </div>
         </div>
       </div>
     </div>
+  </div>
+</section>
+<section class="first-section">
+  <div class="base-section">
+    <h1 class="base-header">First section</h1>
   </div>
 </section>
 <!-- Bootstrap core JavaScript -->
