--- a/index.html
+++ b/index.html
@@ -11,35 +11,28 @@
 </head>
 <body>
 <!-- Navigation -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container">
-    <a class="navbar-brand" href="#">brand</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarResponsive">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
-        <a class="nav-link" href="#">Home
-        <span class="sr-only">(current)</span>
-        </a>
-        </li>
-        <li class="nav-item">
-        <a class="nav-link" href="#">About</a>
-        </li>
-        <li class="nav-item">
-        <a class="nav-link" href="#">Services</a>
-        </li>
-        <li class="nav-item">
-        <a class="nav-link" href="#">Contact</a>
-        </li>
+<nav class="b-nav ">
+  <div class="container-flex">
+    <div class="box-1">
+      <div class="navbar-brand">
+        <a href="#"><img src="assets/img/brand.png" alt=""></a>
+        <p>Hello</p>
+        
+      </div>
+    </div>
+    <div class="box-1">
+      <ul class="navbar-links">
+        <li class="nav-li"><a href="#">home</a></li>
+        <li class="nav-li"><a href="#">home</a></li>
+        <li class="nav-li"><a href="#">home</a></li>
+        <li class="nav-li"><a href="#">home</a></li>
       </ul>
     </div>
   </div>
 </nav>
 <!-- Page Content -->
 <section class="showcase">
-  <div class="base-section"> 
+  <div class="base-section overlay"> 
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
@@ -52,11 +45,7 @@
     </div>
   </div>
 </section>
-<section class="first-section">
-  <div class="base-section">
-    <h1 class="base-header">First section</h1>
-  </div>
-</section>
+
 <!-- Bootstrap core JavaScript -->
 <script src="node_modules/jquery/jquery.min.js"></script>
 <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
