Showcase items corrected

--- a/webPage/cozar.html
+++ b/webPage/cozar.html
@@ -7,17 +7,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sass Template</title>
   <link rel="stylesheet" href="assets/styles/css/app.css">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Karla:700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:500,700,900" rel="stylesheet">
+
 </head>
 <body>
 <!-- Navigation -->
 <nav class="b-nav ">
-  <div class="container-flex-fluid">
-    <div class="box-1">
-      <div class="navbar-brand">
-        <a href="#"><img src="assets/img/brand2.png" alt=""></a>
+  <div class="container-flex">
+    <div class="flex-box">
+      <div class="box-1">
+        <div class="navbar-brand">
+          <a href="#"><img src="assets/img/brand2.png" alt=""></a>
+        </div>
       </div>
-      <p>diseño gráfico</p>
+      <div class="box-1">
+        <p>diseño gráfico</p>
+      </div>
     </div>
     <div class="box-2">
       <ul class="navbar-links">
@@ -27,18 +33,36 @@
         <li class="nav-li"><a href="#">contacto</a></li>
       </ul>
     </div>
+    </div>
   </div>
 </nav>
 <!-- Page Content -->
 <section class="showcase">
-  <div class="base-section overlay"> 
-    <div class="flex-box">
-      <div class="box-1">
-        <h1 class="tag">Welcome</h1>
-      </div>
-      <div class="box-1">
-        <p class="tag">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque iure sunt optio.</p>
-      </div>
+  <div class="overlay"> 
+    <div class="container-fluid">
+        <div class="flex-box">
+          <h1 class="tag">Manuel <br>- Cózar</h1>
+        </div>
+        <div class="flex-box">
+          <div class="box-2">
+            <p class="tag">nuevo proyecto</p>
+            <a href="#">~ Identidad — <br>Apparitions Festival 2018</a>
+          </div>
+        </div>
+    </div>
+  </div>
+</section>
+<section class="block">
+  <div class="container-flex">
+    <div class="box-1">
+      <img id="arrow"src="assets/img/arrow.png" alt="">
+    </div>
+  </div>
+</section>
+<section class="first-section">
+  <div class="base-section">
+    <div class="container">
+      <h3>Soy Manuel Cózar, diseñador gráfico freelance de la Ciudad de México, DF, con más de 10 años de experiencia en diseño y desarrollo de sitios web, diseño de logotipos, imagen corporativa y diseño editorial. Para más información,<a href="#">contáctame.</a>Bienvenido.</h3>
     </div>
   </div>
 </section>
