Project section added

--- a/webPage/cozar.html
+++ b/webPage/cozar.html
@@ -7,13 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sass Template</title>
   <link rel="stylesheet" href="assets/styles/css/app.css">
-  <link href="https://fonts.googleapis.com/css?family=Karla:700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:500,700,900" rel="stylesheet">
 
 </head>
 <body>
 <!-- Navigation -->
-<nav class="b-nav ">
+<nav class="b-nav">
   <div class="container-flex">
     <div class="flex-box">
       <div class="box-1">
@@ -61,12 +61,35 @@
 </section>
 <section class="first-section">
   <div class="base-section">
-    <div class="container">
+    <div class="container-flex-fluid">
       <h3>Soy Manuel Cózar, diseñador gráfico freelance de la Ciudad de México, DF, con más de 10 años de experiencia en diseño y desarrollo de sitios web, diseño de logotipos, imagen corporativa y diseño editorial. Para más información,<a href="#">contáctame.</a>Bienvenido.</h3>
     </div>
   </div>
 </section>
-
+<section class="main-header">
+  <div class="base-section">
+    <h1>Últimos Proyectos</h1>
+  </div>
+</section>
+<section class="project-section">
+  <div class="container-flex-fluid">
+    <div class="boxes">
+      <div class="box"></div>
+    </div>
+    <div class="boxes">
+      <div class="box"></div>
+    </div>
+    <div class="boxes">
+      <div class="box"></div>
+    </div>
+    <div class="boxes">
+      <div class="box"></div>
+    </div>
+    <div class="boxes">
+     <div class="box"></div>
+    </div>
+  </div>
+</section>
 <!-- Bootstrap core JavaScript -->
 <script src="node_modules/jquery/jquery.min.js"></script>
 <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
