Project boxes added

--- a/webPage/cozar.html
+++ b/webPage/cozar.html
@@ -73,23 +73,20 @@
 </section>
 <section class="project-section">
   <div class="container-flex-fluid">
-    <div class="boxes">
-      <div class="box"></div>
-    </div>
-    <div class="boxes">
-      <div class="box"></div>
-    </div>
-    <div class="boxes">
-      <div class="box"></div>
-    </div>
-    <div class="boxes">
-      <div class="box"></div>
-    </div>
-    <div class="boxes">
-     <div class="box"></div>
+    <div class="box-border">
+      <div class="box-default">
+        <div class="in-box-default"></div>
+      </div>
+      <div class="box-default">
+        <div class="in-box-default"></div>
+      </div>
+      <div class="box-default">
+        <div class="in-box-default"></div>
+      </div>
     </div>
   </div>
 </section>
+
 <!-- Bootstrap core JavaScript -->
 <script src="node_modules/jquery/jquery.min.js"></script>
 <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
