Project section reset

--- a/webPage/cozar.html
+++ b/webPage/cozar.html
@@ -72,16 +72,11 @@
   </div>
 </section>
 <section class="project-section">
-  <div class="container-flex-fluid">
-    <div class="box-border">
-      <div class="box-default">
-        <div class="in-box-default"></div>
-      </div>
-      <div class="box-default">
-        <div class="in-box-default"></div>
-      </div>
-      <div class="box-default">
-        <div class="in-box-default"></div>
+    <div class="">
+      <div class="row">
+        <div class="col-lg-6 col-md-12 box-default"><div class="in-box-default"></div></div>
+        <div class="col-lg-6 col-md-12 box-default"><div class="in-box-default"></div>
+        </div>
       </div>
     </div>
   </div>
