--- a/webPage/cozar.html
+++ b/webPage/cozar.html
@@ -72,13 +72,24 @@
   </div>
 </section>
 <section class="project-section">
-    <div class="">
+  <div class="base-section">
+    <div class="container-fluid">
       <div class="row">
-        <div class="col-lg-6 col-md-12 box-default"><div class="in-box-default"></div></div>
-        <div class="col-lg-6 col-md-12 box-default"><div class="in-box-default"></div>
+        <div class="outer-box col-lg-3 col-md-6 col-sm-12">
+          <div class="inner-box"></div>
         </div>
-      </div>
+        <div class="outer-box col-lg-3 col-md-6 col-sm-12">
+          <div class="inner-box"></div>
+        </div>
+        <div class="outer-box col-lg-3 col-md-6 col-sm-12">
+          <div class="inner-box"></div>
+        </div>
+        <div class="outer-box col-lg-3 col-md-6 col-sm-12">
+          <div class="inner-box"></div>
+        </div>
+     </div>
     </div>
+  </div>
   </div>
 </section>
 
