--- a/webPage/cozar.html
+++ b/webPage/cozar.html
@@ -75,19 +75,33 @@
   <div class="base-section">
     <div class="container-fluid">
       <div class="row">
-        <div class="outer-box col-lg-3 col-md-6 col-sm-12">
-          <div class="inner-box"></div>
+        <div class="col-lg-3 col-sm-6 post">
+          <img src="assets/img/icon1.png" class="icons">
         </div>
-        <div class="outer-box col-lg-3 col-md-6 col-sm-12">
-          <div class="inner-box"></div>
+        <div class="col-lg-3 col-sm-6 post">
+          <img src="assets/img/icon1.png" class="icons">
         </div>
-        <div class="outer-box col-lg-3 col-md-6 col-sm-12">
-          <div class="inner-box"></div>
+        <div class="col-lg-3 col-sm-6 post">
+          <img src="assets/img/icon1.png" class="icons">
         </div>
-        <div class="outer-box col-lg-3 col-md-6 col-sm-12">
-          <div class="inner-box"></div>
+        <div class="col-lg-3 col-sm-6 post">
+          <img src="assets/img/icon1.png" class="icons">
         </div>
-     </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-3 col-sm-6 post">
+          <img src="assets/img/icon2.png"class="icons">
+        </div>
+        <div class="col-lg-3 col-sm-6 post">
+          <img src="assets/img/icon2.png"class="icons">
+        </div>
+        <div class="col-lg-3 col-sm-6 post">
+          <img src="assets/img/icon2.png"class="icons">
+        </div>
+        <div class="col-lg-3 col-sm-6 post">
+          <img src="assets/img/icon2.png"class="icons">
+        </div>
+      </div>
     </div>
   </div>
   </div>
