project boxes added

--- a/webPage/cozar.html
+++ b/webPage/cozar.html
@@ -76,30 +76,62 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-3 col-sm-6 post">
-          <img src="assets/img/icon1.png" class="icons">
+          <div class="blockOverlay">
+            <h1>Identidad — Código Riesgo</h1>
+            <img src="assets/img/icon1.png" class="icons">
+          <p>Something</p>
+          </div>
         </div>
         <div class="col-lg-3 col-sm-6 post">
-          <img src="assets/img/icon1.png" class="icons">
+          <div class="blockOverlay">
+            <h1>Identidad — Código Riesgo</h1>
+            <img src="assets/img/icon2.png" class="icons">
+          <p>Something</p>
+          </div>
         </div>
         <div class="col-lg-3 col-sm-6 post">
-          <img src="assets/img/icon1.png" class="icons">
+          <div class="blockOverlay">
+            <h1>Identidad — Código Riesgo</h1>
+            <img src="assets/img/icon3.png" class="icons">
+          <p>Something</p>
+          </div>
         </div>
         <div class="col-lg-3 col-sm-6 post">
-          <img src="assets/img/icon1.png" class="icons">
+          <div class="blockOverlay">
+            <h1>Identidad — Código Riesgo</h1>
+            <img src="assets/img/icon4.png" class="icons">
+          <p>Something</p>
+          </div>
         </div>
       </div>
       <div class="row">
         <div class="col-lg-3 col-sm-6 post">
-          <img src="assets/img/icon2.png"class="icons">
+          <div class="blockOverlay">
+            <h1>Identidad — Código Riesgo</h1>
+            <img src="assets/img/icon5.png"class="icons">
+          <p>Something</p>
+          </div>
         </div>
         <div class="col-lg-3 col-sm-6 post">
-          <img src="assets/img/icon2.png"class="icons">
+          <div class="blockOverlay">
+            <h1>Identidad — Código Riesgo</h1>
+            <img src="assets/img/icon6.png"class="icons">
+          <p>Something</p>
+          </div>
         </div>
         <div class="col-lg-3 col-sm-6 post">
-          <img src="assets/img/icon2.png"class="icons">
+          <div class="blockOverlay">
+            <h1>Identidad — Código Riesgo</h1>
+            <img src="assets/img/icon7.png"class="icons">
+          <p>Something</p>
+          </div>
         </div>
         <div class="col-lg-3 col-sm-6 post">
-          <img src="assets/img/icon2.png"class="icons">
+          <div class="blockOverlay">
+            <h1>Identidad — Código Riesgo</h1>
+            <img src="assets/img/icon8.png"class="icons">
+          <p>Something</p>
+          </div>
         </div>
       </div>
     </div>
@@ -108,7 +140,8 @@
 </section>
 
 <!-- Bootstrap core JavaScript -->
-<script src="node_modules/jquery/jquery.min.js"></script>
-<script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="assets/js/main.js"></script>
+<script src="../src/node_modules/jquery/jquery.min.js"></script>
+<script src="../src/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
