--- a/webPage/cozar.html
+++ b/webPage/cozar.html
@@ -77,60 +77,124 @@
       <div class="row">
         <div class="col-lg-3 col-sm-6 post">
           <div class="blockOverlay">
-            <h1>Identidad — Código Riesgo</h1>
-            <img src="assets/img/icon1.png" class="icons">
-          <p>Something</p>
+            <div class="icon-con">
+              <div class="box-1">
+                <div class="icon-h1">
+                  <h1>Identidad — Código Riesgo</h1>
+                </div>
+              </div>
+              <div class="box-2">
+                <img src="assets/img/icon1.png" class="icons">
+              </div>
+            <p>Something</p>
+            </div>
           </div>
         </div>
         <div class="col-lg-3 col-sm-6 post">
           <div class="blockOverlay">
-            <h1>Identidad — Código Riesgo</h1>
-            <img src="assets/img/icon2.png" class="icons">
-          <p>Something</p>
+            <div class="icon-con">
+              <div class="box-1">
+                <div class="icon-h1">
+                  <h1>Identidad — Código Riesgo</h1>
+                </div>
+              </div>
+              <div class="box-2">
+                <img src="assets/img/icon2.png" class="icons">
+              </div>
+            <p>Something</p>
+            </div>
           </div>
         </div>
         <div class="col-lg-3 col-sm-6 post">
           <div class="blockOverlay">
-            <h1>Identidad — Código Riesgo</h1>
-            <img src="assets/img/icon3.png" class="icons">
-          <p>Something</p>
+            <div class="icon-con">
+              <div class="box-1">
+                <div class="icon-h1">
+                  <h1>Identidad — Código Riesgo</h1>
+                </div>
+              </div>
+              <div class="box-2">
+                <img src="assets/img/icon3.png" class="icons">
+              </div>
+            <p>Something</p>
+            </div>
           </div>
         </div>
         <div class="col-lg-3 col-sm-6 post">
           <div class="blockOverlay">
-            <h1>Identidad — Código Riesgo</h1>
-            <img src="assets/img/icon4.png" class="icons">
-          <p>Something</p>
+            <div class="icon-con">
+              <div class="box-1">
+                <div class="icon-h1">
+                  <h1>Identidad — Código Riesgo</h1>
+                </div>
+              </div>
+              <div class="box-2">
+                <img src="assets/img/icon4.png" class="icons">
+              </div>
+            <p>Something</p>
+            </div>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col-lg-3 col-sm-6 post">
           <div class="blockOverlay">
-            <h1>Identidad — Código Riesgo</h1>
-            <img src="assets/img/icon5.png"class="icons">
-          <p>Something</p>
+            <div class="icon-con">
+              <div class="box-1">
+                <div class="icon-h1">
+                  <h1>Identidad — Código Riesgo</h1>
+                </div>
+              </div>
+              <div class="box-2">
+                <img src="assets/img/icon5.png"class="icons">
+              </div>
+              <p>Something</p>
+            </div>
           </div>
         </div>
         <div class="col-lg-3 col-sm-6 post">
           <div class="blockOverlay">
-            <h1>Identidad — Código Riesgo</h1>
-            <img src="assets/img/icon6.png"class="icons">
-          <p>Something</p>
+            <div class="icon-con">
+              <div class="box-1">
+                <div class="icon-h1">
+                  <h1>Identidad — Código Riesgo</h1>
+                </div>
+              </div>
+              <div class="box-2">
+                <img src="assets/img/icon6.png"class="icons">
+              </div>
+              <p>Something</p>
+            </div>
           </div>
         </div>
         <div class="col-lg-3 col-sm-6 post">
           <div class="blockOverlay">
-            <h1>Identidad — Código Riesgo</h1>
-            <img src="assets/img/icon7.png"class="icons">
-          <p>Something</p>
+            <div class="icon-con">
+              <div class="box-1">
+                <div class="icon-h1">
+                  <h1>Identidad — Código Riesgo</h1>
+                </div>
+              </div>
+              <div class="box-2">
+                <img src="assets/img/icon7.png"class="icons">
+              </div>
+              <p>Something</p>
+            </div>
           </div>
         </div>
         <div class="col-lg-3 col-sm-6 post">
           <div class="blockOverlay">
-            <h1>Identidad — Código Riesgo</h1>
-            <img src="assets/img/icon8.png"class="icons">
-          <p>Something</p>
+            <div class="icon-con">
+              <div class="box-1">
+                <div class="icon-h1">
+                  <h1>Identidad — Código Riesgo</h1>
+                </div>
+              </div>
+              <div class="box-2">
+                <img src="assets/img/icon8.png"class="icons">
+              </div>
+              <p>Something</p>
+            </div>
           </div>
         </div>
       </div>
