--- a/webPage/cozar.html
+++ b/webPage/cozar.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sass Template</title>
   <link rel="stylesheet" href="assets/styles/css/app.css">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:800" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:500,700,900" rel="stylesheet">
 
@@ -75,7 +76,7 @@
   <div class="base-section">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-lg-3 col-sm-6 post">
+        <div class="col-lg-3 col-sm-4 post">
           <div class="blockOverlay">
             <div class="icon-con">
               <div class="box-1">
@@ -90,7 +91,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-sm-6 post">
+        <div class="col-lg-3 col-sm-4 post">
           <div class="blockOverlay">
             <div class="icon-con">
               <div class="box-1">
@@ -105,7 +106,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-sm-6 post">
+        <div class="col-lg-3 col-sm-4 post">
           <div class="blockOverlay">
             <div class="icon-con">
               <div class="box-1">
@@ -120,7 +121,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-sm-6 post">
+        <div class="col-lg-3 col-sm-4 post">
           <div class="blockOverlay">
             <div class="icon-con">
               <div class="box-1">
@@ -135,9 +136,9 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-3 col-sm-6 post">
+      <!-- </div>
+      <div class="row"> -->
+        <div class="col-lg-3 col-sm-4 post">
           <div class="blockOverlay">
             <div class="icon-con">
               <div class="box-1">
@@ -152,7 +153,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-sm-6 post">
+        <div class="col-lg-3 col-sm-4 post">
           <div class="blockOverlay">
             <div class="icon-con">
               <div class="box-1">
@@ -167,7 +168,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-sm-6 post">
+        <div class="col-lg-3 col-sm-4 post">
           <div class="blockOverlay">
             <div class="icon-con">
               <div class="box-1">
@@ -182,7 +183,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-sm-6 post">
+        <div class="col-lg-3 col-sm-4 post">
           <div class="blockOverlay">
             <div class="icon-con">
               <div class="box-1">
