--- a/webPage/cozar.html
+++ b/webPage/cozar.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sass Template</title>
   <link rel="stylesheet" href="assets/styles/css/app.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Poppins:800" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:500,700,900" rel="stylesheet">
@@ -53,6 +54,9 @@
     </div>
   </div>
 </section>
+<div class="wraping">
+
+
 <section class="block">
   <div class="container-flex">
     <div class="box-1">
@@ -63,7 +67,7 @@
 <section class="first-section">
   <div class="base-section">
     <div class="container-flex-fluid">
-      <h3>Soy Manuel Cózar, diseñador gráfico freelance de la Ciudad de México, DF, con más de 10 años de experiencia en diseño y desarrollo de sitios web, diseño de logotipos, imagen corporativa y diseño editorial. Para más información,<a href="#">contáctame.</a>Bienvenido.</h3>
+      <h3>Soy Manuel Cózar, diseñador gráfico freelance de la Ciudad de México, DF, con más de 10 años de experiencia en diseño y desarrollo de sitios web, diseño de logotipos, imagen corporativa y diseño editorial. Para más información, <a href="#">contáctame.</a>Bienvenido.</h3>
     </div>
   </div>
 </section>
@@ -201,8 +205,33 @@
       </div>
     </div>
   </div>
-  </div>
+  <section class="main-header">
+    <div class="base-section">
+      <h1><a href="">Ver todos los proyectos</a></h1>
+    </div>
+  </section>
 </section>
+<footer>
+  <div class="base-section">
+    <div class="row">
+      <div class="col-lg-6 col-md-6 col-sm-12">
+      </div>
+      <div class="col-lg-6 col-md-6 col-sm-12">
+        <div class="flex-box">
+          <div class="box-1">
+            <p class="social-icons"><i class="fab fa-instagram"></i></p>
+            <p class="social-icons"><i class="fab fa-facebook"></i></p>
+            <p class="social-icons"><i class="fab fa-tumblr"></i></p>
+            <p class="social-icons"><i class="fab fa-linkedin"></i></p>
+            <p class="social-icons"><i class="fab fa-behance"></i></p>
+            <p class="social-icons"><i class="fab fa-twitter"></i></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
+</div>
 
 <!-- Bootstrap core JavaScript -->
 <script src="assets/js/main.js"></script>
