--- a/webPage/cozar.html
+++ b/webPage/cozar.html
@@ -15,17 +15,18 @@
 </head>
 <body>
 <!-- Navigation -->
+<div class="wraping">
 <nav class="b-nav">
   <div class="container-flex">
     <div class="flex-box">
       <div class="box-1">
         <div class="navbar-brand">
-          <a href="#"><img src="assets/img/brand2.png" alt=""></a>
-        </div>
+        <a href="#"><img src="assets/img/brand2.png" alt=""></a>
       </div>
-      <div class="box-1">
-        <p>diseño gráfico</p>
       </div>
+    <div class="box-1">
+      <p>diseño gráfico</p>
+    </div>
     </div>
     <div class="box-2">
       <ul class="navbar-links">
@@ -34,7 +35,6 @@
         <li class="nav-li"><a href="#">proyectos</a></li>
         <li class="nav-li"><a href="#">contacto</a></li>
       </ul>
-    </div>
     </div>
   </div>
 </nav>
@@ -54,9 +54,6 @@
     </div>
   </div>
 </section>
-<div class="wraping">
-
-
 <section class="block">
   <div class="container-flex">
     <div class="box-1">
@@ -225,6 +222,10 @@
             <p class="social-icons"><i class="fab fa-linkedin"></i></p>
             <p class="social-icons"><i class="fab fa-behance"></i></p>
             <p class="social-icons"><i class="fab fa-twitter"></i></p>
+          </div>
+          <div class="box-1">
+            <p>2018 © Manuel Cózar | Diseño gráfico y dirección de arte | freelance. México DF
+                hello@cozar.me  t. (044) 55 2715.1423</p>
           </div>
         </div>
       </div>
