--- a/webPage/cozar.html
+++ b/webPage/cozar.html
@@ -8,8 +8,9 @@
   <title>Sass Template</title>
   <link rel="stylesheet" href="assets/styles/css/app.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Nunito:800" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Poppins:800" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:500,700,900" rel="stylesheet">
 
 </head>
@@ -18,15 +19,17 @@
 <div class="wraping">
 <nav class="b-nav">
   <div class="container-flex">
-    <div class="flex-box">
-      <div class="box-1">
-        <div class="navbar-brand">
-        <a href="#"><img src="assets/img/brand2.png" alt=""></a>
+    <div class="nav-left">
+      <div class="flex-box">
+        <div class="box-1">
+          <div class="navbar-brand">
+            <a href="#"><img src="assets/img/brand2.png" alt=""></a>
+          </div>
+        </div>
+        <div class="box-1" id="p">
+          <p>diseño gráfico</p>
+        </div>
       </div>
-      </div>
-    <div class="box-1">
-      <p>diseño gráfico</p>
-    </div>
     </div>
     <div class="box-2">
       <ul class="navbar-links">
@@ -88,7 +91,6 @@
               <div class="box-2">
                 <img src="assets/img/icon1.png" class="icons">
               </div>
-            <p>Something</p>
             </div>
           </div>
         </div>
@@ -97,13 +99,12 @@
             <div class="icon-con">
               <div class="box-1">
                 <div class="icon-h1">
-                  <h1>Identidad — Código Riesgo</h1>
+                  <h1>Branding — Boga Arquitectura</h1>
                 </div>
               </div>
               <div class="box-2">
                 <img src="assets/img/icon2.png" class="icons">
               </div>
-            <p>Something</p>
             </div>
           </div>
         </div>
@@ -112,13 +113,12 @@
             <div class="icon-con">
               <div class="box-1">
                 <div class="icon-h1">
-                  <h1>Identidad — Código Riesgo</h1>
+                  <h1>Identidad — Marco López</h1>
                 </div>
               </div>
               <div class="box-2">
                 <img src="assets/img/icon3.png" class="icons">
               </div>
-            <p>Something</p>
             </div>
           </div>
         </div>
@@ -127,13 +127,12 @@
             <div class="icon-con">
               <div class="box-1">
                 <div class="icon-h1">
-                  <h1>Identidad — Código Riesgo</h1>
+                  <h1>Diseño de brochure — Dermo Spa</h1>
                 </div>
               </div>
               <div class="box-2">
                 <img src="assets/img/icon4.png" class="icons">
               </div>
-            <p>Something</p>
             </div>
           </div>
         </div>
@@ -144,13 +143,13 @@
             <div class="icon-con">
               <div class="box-1">
                 <div class="icon-h1">
-                  <h1>Identidad — Código Riesgo</h1>
+                  <h1>Identidad — The Glorious Life Of Catrinas</h1>
                 </div>
               </div>
               <div class="box-2">
                 <img src="assets/img/icon5.png"class="icons">
               </div>
-              <p>Something</p>
+
             </div>
           </div>
         </div>
@@ -159,13 +158,13 @@
             <div class="icon-con">
               <div class="box-1">
                 <div class="icon-h1">
-                  <h1>Identidad — Código Riesgo</h1>
+                  <h1>Identidad — México Global</h1>
                 </div>
               </div>
               <div class="box-2">
                 <img src="assets/img/icon6.png"class="icons">
               </div>
-              <p>Something</p>
+
             </div>
           </div>
         </div>
@@ -174,13 +173,13 @@
             <div class="icon-con">
               <div class="box-1">
                 <div class="icon-h1">
-                  <h1>Identidad — Código Riesgo</h1>
+                  <h1>Identidad — Apparitions Festival 2018</h1>
                 </div>
               </div>
               <div class="box-2">
                 <img src="assets/img/icon7.png"class="icons">
               </div>
-              <p>Something</p>
+
             </div>
           </div>
         </div>
@@ -189,13 +188,13 @@
             <div class="icon-con">
               <div class="box-1">
                 <div class="icon-h1">
-                  <h1>Identidad — Código Riesgo</h1>
+                  <h1>Identidad - Heladería La Frepola</h1>
                 </div>
               </div>
               <div class="box-2">
                 <img src="assets/img/icon8.png"class="icons">
               </div>
-              <p>Something</p>
+
             </div>
           </div>
         </div>
@@ -223,9 +222,15 @@
             <p class="social-icons"><i class="fab fa-behance"></i></p>
             <p class="social-icons"><i class="fab fa-twitter"></i></p>
           </div>
-          <div class="box-1">
-            <p>2018 © Manuel Cózar | Diseño gráfico y dirección de arte | freelance. México DF
-                hello@cozar.me  t. (044) 55 2715.1423</p>
+          <div class="f-desc">
+            <div class="flex-box">
+              <div class="box-1">
+                <p>2018 © Manuel Cózar | Diseño gráfico y dirección de arte | freelance. México DF</p>
+              </div>
+              <div class="box-1">
+                <p>hello@cozar.me  t. (044) 55 2715.1423</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
